--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/WatsonJavaPlay/lib/httpcore-4.3.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Clóvis/Documents/Development/Java Libs/httpcore-4.3.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
